<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>dz.cirta</groupId>
    <artifactId>cirta-social</artifactId>
    <version>2.0.1</version>
    <name>cirta-social doc</name>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.elasticsearch.client</groupId>
                <artifactId>elasticsearch-rest-client</artifactId>
                <version>7.10.0</version>
            </dependency>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-jpamodelgen</artifactId>
                <version>5.4.26.Final</version>
            </dependency>
            <dependency>
                <!-- https://docs.spring.io/spring-boot/docs/current/maven-plugin/reference/htmlsingle/-->
                <!-- Import dependency management from Spring Boot -->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>2.4.4</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!-- todo ad -->
    <organization>
        <name>cirta.app</name>
        <url>https://cirta.app/</url>
    </organization>

    <!-- todo ad -->
    <ciManagement>
        <url>https://${ngrok_sub_domain}.ngrok.io/job/cirta-social/job/cirta-social-release/</url>
        <notifiers>
            <notifier>
                <type>email</type>
                <address>abdessamed.diab@gmail.com</address>
                <sendOnError>true</sendOnError>
                <sendOnFailure>true</sendOnFailure>
            </notifier>
        </notifiers>
        <system>jenkins</system>
    </ciManagement>

    <!--https://maven.apache.org/plugins/maven-site-plugin/usage.html#Generating_a_Site-->
    <!--deploy a site to remote server using scp protocol-->
    <distributionManagement>
        <site>
            <id>cirta.app</id>
            <url>scp://cirta.app/${project.version}/doc/</url>
        </site>
    </distributionManagement>

    <scm>
        <url>https://github.com/abdessamed-diab/cirta-social.git</url>
    </scm>

    <licenses>
        <license>
            <name>MIT License</name>
            <distribution>repo</distribution>
            <url>https://raw.githubusercontent.com/abdessamed-diab/cirta-social/master/LICENSE</url>
            <comments>${project.name} is open source (CaaS) software</comments>
        </license>
    </licenses>

    <!-- todo ad -->
    <developers>
        <developer>
            <name>DIAB Abdessamed</name>
            <email>abdessamed.diab@gmail.com</email>
            <url>https://mobile.cirta.app/</url>
        </developer>
    </developers>

    <!-- todo ad -->
    <contributors>
        <contributor>
            <name>DIAB Abdessamed</name>
            <email>abdessamed.diab@gmail.com</email>
            <url>https://mobile.cirta.app/</url>
            <organization>cirta.app</organization>
        </contributor>
    </contributors>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.security</groupId>
            <artifactId>spring-security-test</artifactId>
            <version>5.3.6.RELEASE</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-rest</artifactId>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.social</groupId>
            <artifactId>spring-social-facebook</artifactId>
            <version>3.0.0.M3</version>
        </dependency>
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt</artifactId>
            <version>0.8.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.pdfbox</groupId>
            <artifactId>pdfbox</artifactId>
            <version>2.0.21</version>
        </dependency>

        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.2.12</version>
        </dependency>
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-core</artifactId>
        </dependency>


        <dependency>
            <groupId>org.hibernate.search</groupId>
            <artifactId>hibernate-search-mapper-orm</artifactId>
            <version>6.0.0.Final</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate.search</groupId>
            <artifactId>hibernate-search-backend-elasticsearch</artifactId>
            <version>6.0.0.Final</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-jpamodelgen</artifactId>
            <version>5.5.3.Final</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <!--for spring social v3 milestone-->
    <repositories>
        <repository>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <id>plugins-release-central</id>
            <name>plugins-release</name>
            <url>https://repo.spring.io/plugins-release</url>
        </repository>
    </repositories>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>2.5.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
                <version>3.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
                <configuration>
                    <argLine>
                        --illegal-access=permit
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-site-plugin</artifactId>
                <version>3.7.1</version>
                <configuration>
                    <outputDirectory>${project.basedir}/src/main/resources/public/pages/doc/${project.version}/</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.8</version>
            </plugin>
        </plugins>
    </build>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.1.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-report-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jxr-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <linkJavadoc>true</linkJavadoc>
                    <javadocDir>${project.basedir}/src/main/resources/public/pages/doc/${project.version}/api/</javadocDir>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.2.0</version>
                <configuration>
                    <outputDirectory>${project.basedir}/src/main/resources/public/pages/doc/${project.version}/api/</outputDirectory>
                    <reportOutputDirectory>${project.basedir}/src/main/resources/public/pages/doc/${project.version}/api/</reportOutputDirectory>
                    <author>true</author>
                    <debug>true</debug>
                    <destDir>api</destDir>
                    <detectJavaApiLink>true</detectJavaApiLink>
                    <detectLinks>true</detectLinks>
                    <failOnError>false</failOnError>
                    <header>
                        <![CDATA[<b>${project.name}</b>: (CaaS) ${project.version}" on AWS EC2 ]]>
                    </header>
                    <locale>en</locale>
                    <show>private</show>
                    <level>private</level>
                    <additionalJOption>--no-module-directories</additionalJOption>
                    <includeDependencySources>false</includeDependencySources>
                </configuration>
            </plugin>
        </plugins>
    </reporting>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <ngrok_sub_domain>481db6471f8a</ngrok_sub_domain>
    </properties>

    <description>
        cirta-social is a Container as a Service (CaaS) software running on AWS cloud platform.
        cirta-social as its name suggests, is an online social media platform uses Facebook projects to allow members of the same group to interact with each other over a customizable content.
    </description>

</project>
